// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components|Layout addon panel in right 1`] = `
<div>
  <div
    class="css-16z7x6f"
  >
    <div
      class="SplitPane  vertical "
      style="display:flex;flex:1;height:100%;position:absolute;outline:none;overflow:hidden;-moz-user-select:text;-webkit-user-select:text;-ms-user-select:text;user-select:text;flex-direction:row;left:0;right:0"
    >
      <div
        class="Pane vertical Pane1  "
        style="flex:none;position:relative;outline:none;width:250px"
      >
        <div
          class="css-7r9jvr"
        >
          <div
            class="css-9in0fq"
          >
            <div
              style="position:absolute;height:100%;width:100%;color:white;background:#4abdac"
            >
              Stories
            </div>
          </div>
        </div>
      </div>
      <span
        class="Resizer vertical "
      />
      <div
        class="Pane vertical Pane2  "
        style="flex:1;position:relative;outline:none"
      >
        <div
          class="SplitPane  vertical "
          style="display:flex;flex:1;height:100%;position:absolute;outline:none;overflow:hidden;-moz-user-select:text;-webkit-user-select:text;-ms-user-select:text;user-select:text;flex-direction:row;left:0;right:0"
        >
          <div
            class="Pane vertical Pane1  "
            style="flex:1;position:relative;outline:none"
          >
            <div
              class="css-1e1vreg"
            >
              <div
                class="css-1nsb3py"
              />
              <div
                class="css-1xkk3c8"
              >
                <div
                  style="position:absolute;height:100%;width:100%;color:white;background:#f7b733"
                >
                  Preview
                </div>
              </div>
            </div>
          </div>
          <span
            class="Resizer vertical "
          />
          <div
            class="Pane vertical Pane2  "
            style="flex:none;position:relative;outline:none;width:400px"
          >
            <div
              class="css-1929wko"
            >
              <div
                style="position:absolute;height:100%;width:100%;color:white;background:#fc4a1a"
              >
                Addon
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div />
  <div />
</div>
`;

exports[`Storyshots Components|Layout default 1`] = `
<div>
  <div
    class="css-16z7x6f"
  >
    <div
      class="SplitPane  vertical "
      style="display:flex;flex:1;height:100%;position:absolute;outline:none;overflow:hidden;-moz-user-select:text;-webkit-user-select:text;-ms-user-select:text;user-select:text;flex-direction:row;left:0;right:0"
    >
      <div
        class="Pane vertical Pane1  "
        style="flex:none;position:relative;outline:none;width:250px"
      >
        <div
          class="css-7r9jvr"
        >
          <div
            class="css-9in0fq"
          >
            <div
              style="position:absolute;height:100%;width:100%;color:white;background:#4abdac"
            >
              Stories
            </div>
          </div>
        </div>
      </div>
      <span
        class="Resizer vertical "
      />
      <div
        class="Pane vertical Pane2  "
        style="flex:1;position:relative;outline:none"
      >
        <div
          class="SplitPane  horizontal "
          style="display:flex;flex:1;height:100%;position:absolute;outline:none;overflow:hidden;-moz-user-select:text;-webkit-user-select:text;-ms-user-select:text;user-select:text;bottom:0;flex-direction:column;min-height:100%;top:0;width:100%"
        >
          <div
            class="Pane horizontal Pane1  "
            style="flex:1;position:relative;outline:none"
          >
            <div
              class="css-xlbk67"
            >
              <div
                class="css-1nsb3py"
              />
              <div
                class="css-1xkk3c8"
              >
                <div
                  style="position:absolute;height:100%;width:100%;color:white;background:#f7b733"
                >
                  Preview
                </div>
              </div>
            </div>
          </div>
          <span
            class="Resizer horizontal "
          />
          <div
            class="Pane horizontal Pane2  "
            style="flex:none;position:relative;outline:none;height:200px;display:flex"
          >
            <div
              class="css-hys0kv"
            >
              <div
                style="position:absolute;height:100%;width:100%;color:white;background:#fc4a1a"
              >
                Addon
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div />
  <div />
</div>
`;

exports[`Storyshots Components|Layout full screen 1`] = `
<div>
  <div
    class="css-16z7x6f"
  >
    <div
      class="SplitPane  vertical disabled"
      style="display:flex;flex:1;height:100%;position:absolute;outline:none;overflow:hidden;-moz-user-select:text;-webkit-user-select:text;-ms-user-select:text;user-select:text;flex-direction:row;left:0;right:0"
    >
      <div
        class="Pane vertical Pane1  "
        style="flex:none;position:relative;outline:none;width:1px"
      >
        <div
          class="css-1yb218t"
        >
          <div
            class="css-9in0fq"
          >
            <div
              style="position:absolute;height:100%;width:100%;color:white;background:#4abdac"
            >
              Stories
            </div>
          </div>
        </div>
      </div>
      <span
        class="Resizer vertical disabled"
      />
      <div
        class="Pane vertical Pane2  "
        style="flex:1;position:relative;outline:none"
      >
        <div
          class="SplitPane  horizontal disabled"
          style="display:flex;flex:1;height:100%;position:absolute;outline:none;overflow:hidden;-moz-user-select:text;-webkit-user-select:text;-ms-user-select:text;user-select:text;bottom:0;flex-direction:column;min-height:100%;top:0;width:100%"
        >
          <div
            class="Pane horizontal Pane1  "
            style="flex:1;position:relative;outline:none"
          >
            <div
              class="css-xlbk67"
            >
              <div
                class="css-1nsb3py"
              />
              <div
                class="css-15swx87"
              >
                <div
                  style="position:absolute;height:100%;width:100%;color:white;background:#f7b733"
                >
                  Preview
                </div>
              </div>
            </div>
          </div>
          <span
            class="Resizer horizontal disabled"
          />
          <div
            class="Pane horizontal Pane2  "
            style="flex:none;position:relative;outline:none;height:1px;display:flex"
          >
            <div
              class="css-1yfjvq7"
            >
              <div
                style="position:absolute;height:100%;width:100%;color:white;background:#fc4a1a"
              >
                Addon
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div />
  <div />
</div>
`;

exports[`Storyshots Components|Layout mobile 1`] = `
<div>
  <div
    class="css-1nhql0h"
  >
    <div>
      <div
        class="css-1kes5pl"
      >
        <div
          class="css-1whcqvw"
        >
          <button
            class="css-xcko46"
            role="tab"
            type="button"
          >
            Navigator
          </button>
          <button
            class="css-1hf831j"
            role="tab"
            type="button"
          >
            Preview
          </button>
          <button
            class="css-xcko46"
            role="tab"
            type="button"
          >
            Addons
          </button>
        </div>
      </div>
      <div
        class="css-1hyfx7x"
      >
        <div
          class="css-9in0fq"
        >
          <div
            style="position:absolute;height:100%;width:100%;color:white;background:#4abdac"
          >
            Stories
          </div>
        </div>
      </div>
      <div
        class="css-1p46ag7"
        selected=""
      >
        <div
          class="css-9in0fq"
        >
          <div
            style="position:absolute;height:100%;width:100%;color:white;background:#f7b733"
          >
            Preview
          </div>
        </div>
      </div>
      <div
        class="css-1hyfx7x"
      >
        <div
          style="position:absolute;height:100%;width:100%;color:white;background:#fc4a1a"
        >
          Addon
        </div>
      </div>
    </div>
  </div>
  <div />
  <div />
</div>
`;

exports[`Storyshots Components|Layout no addon panel 1`] = `
<div>
  <div
    class="css-16z7x6f"
  >
    <div
      class="SplitPane  vertical "
      style="display:flex;flex:1;height:100%;position:absolute;outline:none;overflow:hidden;-moz-user-select:text;-webkit-user-select:text;-ms-user-select:text;user-select:text;flex-direction:row;left:0;right:0"
    >
      <div
        class="Pane vertical Pane1  "
        style="flex:none;position:relative;outline:none;width:250px"
      >
        <div
          class="css-7r9jvr"
        >
          <div
            class="css-9in0fq"
          >
            <div
              style="position:absolute;height:100%;width:100%;color:white;background:#4abdac"
            >
              Stories
            </div>
          </div>
        </div>
      </div>
      <span
        class="Resizer vertical "
      />
      <div
        class="Pane vertical Pane2  "
        style="flex:1;position:relative;outline:none"
      >
        <div
          class="SplitPane  horizontal disabled"
          style="display:flex;flex:1;height:100%;position:absolute;outline:none;overflow:hidden;-moz-user-select:text;-webkit-user-select:text;-ms-user-select:text;user-select:text;bottom:0;flex-direction:column;min-height:100%;top:0;width:100%"
        >
          <div
            class="Pane horizontal Pane1  "
            style="flex:1;position:relative;outline:none"
          >
            <div
              class="css-xlbk67"
            >
              <div
                class="css-1nsb3py"
              />
              <div
                class="css-1xkk3c8"
              >
                <div
                  style="position:absolute;height:100%;width:100%;color:white;background:#f7b733"
                >
                  Preview
                </div>
              </div>
            </div>
          </div>
          <span
            class="Resizer horizontal disabled"
          />
          <div
            class="Pane horizontal Pane2  "
            style="flex:none;position:relative;outline:none;height:1px;display:flex"
          >
            <div
              class="css-1yfjvq7"
            >
              <div
                style="position:absolute;height:100%;width:100%;color:white;background:#fc4a1a"
              >
                Addon
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div />
  <div />
</div>
`;

exports[`Storyshots Components|Layout no stories panel 1`] = `
<div>
  <div
    class="css-16z7x6f"
  >
    <div
      class="SplitPane  vertical disabled"
      style="display:flex;flex:1;height:100%;position:absolute;outline:none;overflow:hidden;-moz-user-select:text;-webkit-user-select:text;-ms-user-select:text;user-select:text;flex-direction:row;left:0;right:0"
    >
      <div
        class="Pane vertical Pane1  "
        style="flex:none;position:relative;outline:none;width:1px"
      >
        <div
          class="css-1yb218t"
        >
          <div
            class="css-9in0fq"
          >
            <div
              style="position:absolute;height:100%;width:100%;color:white;background:#4abdac"
            >
              Stories
            </div>
          </div>
        </div>
      </div>
      <span
        class="Resizer vertical disabled"
      />
      <div
        class="Pane vertical Pane2  "
        style="flex:1;position:relative;outline:none"
      >
        <div
          class="SplitPane  horizontal "
          style="display:flex;flex:1;height:100%;position:absolute;outline:none;overflow:hidden;-moz-user-select:text;-webkit-user-select:text;-ms-user-select:text;user-select:text;bottom:0;flex-direction:column;min-height:100%;top:0;width:100%"
        >
          <div
            class="Pane horizontal Pane1  "
            style="flex:1;position:relative;outline:none"
          >
            <div
              class="css-xlbk67"
            >
              <div
                class="css-1nsb3py"
              />
              <div
                class="css-1xkk3c8"
              >
                <div
                  style="position:absolute;height:100%;width:100%;color:white;background:#f7b733"
                >
                  Preview
                </div>
              </div>
            </div>
          </div>
          <span
            class="Resizer horizontal "
          />
          <div
            class="Pane horizontal Pane2  "
            style="flex:none;position:relative;outline:none;height:200px;display:flex"
          >
            <div
              class="css-hys0kv"
            >
              <div
                style="position:absolute;height:100%;width:100%;color:white;background:#fc4a1a"
              >
                Addon
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div />
  <div />
</div>
`;
